// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly when the certificate is not issued 1`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate not issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been revoked
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate issuer has been identified
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when the certificate is revoked 1`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate revoked
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate issuer has been identified
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when the certificate is verified 1`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been revoked
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate issuer has been identified
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when the hash mismatch 1`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been revoked
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate issuer has been identified
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders correctly when the issuers are not identified 1`] = `
<div
  className="undefined undefined bg-white p-3"
>
  <div
    className="mb-3"
  >
    <h5>
      Details
    </h5>
  </div>
  <div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been tampered with
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has been issued
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-check text-success mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate has not been revoked
        </div>
      </div>
    </div>
    <div
      className="row"
    >
      <div
        className="col-2"
      >
        <i
          className="fas fa-times text-danger mr-2"
        />
      </div>
      <div
        className="col-10"
      >
        <div
          className="row"
        >
          Certificate issuer identity is invalid
        </div>
      </div>
    </div>
  </div>
</div>
`;
